--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "App.js",
   "scripts": {
     "start": "npx parcel index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build",
+    "test": "parcel test"
   },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
